<resources>
    <string name="app_name">Food@Door</string>
    <string name="action_settings">Settings</string>
    <string name="deliveringto">DELIVERING TO</string>
    <!-- bootom nav -->
    <string name="bottom_home">Home</string>
    <string name="bottom_orders">Orders</string>
    <string name="bottom_userInfo">User</string>
    <string name="bottom_checkout">Checkout</string>
    <string name="delivery_from">From</string>

    <!-- Login -->
    <string name="hint_password">Password</string>
    <string name="hint_mobile">Phone Number</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_reset">Reset Password</string>
    <string name="button_sign_up">Sign Up</string>

    <!-- Facebook -->
    <string name="facebook_app_id">1541888159173020</string>
    <string name="fb_login_protocol_scheme">fb205344443265000</string>
    <!-- get phone number -->
    <string name="dialog_button_save">Save</string>
    <string name="dialog_title">Please input your phone number</string>


    <!-- Reset Password -->
    <string name="title_reset">Reset Password</string>
    <string name="old_password">Provisional Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="button_submit">Submit</string>

    <!-- Register -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email Address</string>
    <string name="button_register">Register</string>
    <string name="hint_address">Address</string>
    <string name="text_address">Set Your Address</string>
    <string name="button_address">GO</string>


    <!-- Check out -->
    <string name="button_continue">Continue</string>
    <string name="button_cancel">Cancel</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-4653619194621723/3984893897</string>
    <string name="interstitial_ad_page">ca-app-pub-4653619194621723/8598393496</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart_button">Add to Cart</string>
    <string name="food_quantity">Quantity:</string>
    <string name="Quantity_Null">quantity cannot be zero</string>

    <!-- personal info fragment -->
    <string name="userName">User Name:</string>
    <string name="userEmail">Email Address:</string>
    <string name="userMobile">Phone Number:</string>
    <string name="userPassword">Password:</string>
    <string name="userAddress">Delivery Address:</string>
    <string name="btn_reset">Reset Password</string>
    <string name="btn_update">Update Address</string>
    <string name="btn_logout">Log out</string>
    <string name="map_confirm_address">Confirm Address</string>
    <string name="map_current_address">Current Address</string>
    <string name="map_dilevery_address">Delivery Address</string>
    <string name="map_fragment_enter_delivery">Enter Delivery Address</string>
    <string name="personal_info_updateAdd">Update Address</string>
    <string name="personal_info_reset_password">Reset Password</string>
    <string name="personal_info_shipping_confirm">confirm Address</string>
    <string name="personal_info_logout">LogOut</string>
    <string name="personal_info_default_address">Default Address</string>
    <string name="register_user_address_error">please enter your address</string>

    <string-array name="countries">
        <item>USA</item>
        <item>INDIA</item>
        <item>UK</item>
        <item>MEX</item>
    </string-array>

    <string-array name="states">
        <item>IL</item>
        <item>CA</item>
        <item>Mass</item>
        <item>Or</item>
        <item>NY</item>
        <item>NJ</item>
        <item>PHI</item>
        <item>BT</item>
        <item>MO</item>
        <item>WA</item>
        <item>AL</item>
        <item>NH</item>
    </string-array>

    <string-array name="foodCities">
        <item>city</item>
        <item>Delhi</item>
        <item>banglore</item>
    </string-array>

    <string name="hint_search">Search by Order ID</string>
    <string name="hint_orderId">ID:</string>
    <string name="hint_orderTotal">$ </string>
    <string name="hint_orderStatus">Order Status:</string>
    <string name="hint_orderDate">Date:</string>

    <!-- Order Item -->
    <string name="hint_orderName">Name:</string>
    <string name="hint_orderQuantity">Quantity:</string>
    <string name="hint_orderAddress">Deliver Address:</string>
    <string name="button_track">Track</string>
    <string name="button_review">Write a Review</string>

    <!-- review fragment-->
    <string name="hint_review">Post your review here</string>
    <string name="previous_review_title">Previous Reviews</string>
    <string name="empty_review1">No review for this item yet.</string>
    <string name="empty_review2">Be the first one to write a review for it.</string>
    <string name="tool_address_map">Address Map</string>
    <string name="tool_bar_cart_items">Cart</string>


</resources>
