<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/input2"
        android:hint="@string/hint_password"
        android:gravity="center">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signInBtn"
        android:background="@android:color/holo_blue_light"
        android:layout_below="@+id/input1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <Button
        android:text="@string/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset"
        android:background="@android:color/transparent"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/signInBtn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <Button
        android:text="@string/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpBtn"
        android:background="@android:color/holo_blue_dark"
        android:layout_alignBaseline="@+id/reset"
        android:layout_alignBottom="@+id/reset"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:layout_below="@+id/reset"
        android:layout_alignParentStart="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/food_deivery_icon"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/hint_mobile"
        android:gravity="center"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/mobile"
            android:textAlignment="center"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>