<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:layout_below="@+id/input_name">
            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:id="@+id/userEmail"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mobile"
            android:layout_below="@+id/input_email">
            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:id="@+id/userMobile"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_below="@+id/input_phone">
            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:id="@+id/userPassword"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/imageView3"
            android:layout_alignParentStart="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:id="@+id/userName"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regButton"
            android:background="@color/colorPrimary"
            android:textStyle="normal|bold"
            android:textColor="@android:color/white"
            android:layout_below="@+id/register_address_err"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/personal_icon"
            android:id="@+id/imageView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/input_password"
            android:id="@+id/personal_info_default_address"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:cardElevation="6dp"
            app:cardCornerRadius="3dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/personal_info_updateAdd"
                    android:id="@+id/updateAddress"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/shippingLayout" />
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_arrow_drop_down_24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/imageView5" />

                <include
                    layout="@layout/shipping_fill_layout"
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_below="@id/updateAddress"
                    android:id="@+id/shippingLayout"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_address_err"
            android:visibility="gone"
            android:layout_below="@id/personal_info_default_address"
            android:text="@string/register_user_address_error"/>

    </RelativeLayout>

</ScrollView>
