<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="10dp"
        android:id="@+id/reviewCard" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star_blank"
                    android:id="@+id/star1"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star_blank"
                    android:id="@+id/star2"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star_blank"
                    android:id="@+id/star3"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star_blank"
                    android:id="@+id/star4"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star_blank"
                    android:id="@+id/star5"
                    android:layout_weight="1" />
            </LinearLayout>

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine"
                android:ems="10"
                android:id="@+id/reviewText"
                android:hint="@string/hint_review" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:background="@drawable/button_selector" />

                <Button
                    android:text="@string/button_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:background="@drawable/button_selector" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="10dp"
        android:id="@+id/emptyReviewCard"
        android:visibility="gone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/empty_review1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

            <TextView
                android:text="@string/empty_review2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="10dp"
        android:id="@+id/preReviewCard"
        android:visibility="gone"
        app:cardBackgroundColor="@android:color/transparent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/previous_review_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/review_title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reviewRecyclerView"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
