<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OrdersFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            android:id="@+id/searchCardView">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_search"
                    android:id="@+id/searchText"
                    android:layout_toStartOf="@+id/searchButton" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search_24dp"
                    android:id="@+id/searchButton"
                    android:background="@android:color/transparent"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:elevation="10dp"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="10dp"
            android:id="@+id/trackingCard">

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:id="@+id/orderId"
                    android:text="@string/hint_orderId" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/orderId"
                    android:id="@+id/orderIdText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/totalOrderText"
                    android:id="@+id/totalOrder"
                    android:text="@string/hint_orderTotal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/totalOrderText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/orderStatusText"
                    android:layout_alignBottom="@+id/orderStatusText"
                    android:id="@+id/orderStatus"
                    android:text="@string/hint_orderStatus" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/totalOrderText"
                    android:layout_alignTop="@+id/orderDate"
                    android:id="@+id/orderStatusText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/orderId"
                    android:layout_below="@+id/orderId"
                    android:layout_marginTop="10dp"
                    android:id="@+id/orderDate"
                    android:text="@string/hint_orderDate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/orderDate"
                    android:layout_alignBottom="@+id/orderDate"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/orderDateText"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:scrollbars="vertical"
            android:id="@+id/orderRecyclerView" />

    </LinearLayout>

</FrameLayout>
